Fixed code overflow problem. Also "ul"s.

--- a/css/fallrisk.github.io.css
+++ b/css/fallrisk.github.io.css
@@ -77,14 +77,14 @@
     padding: 5px;
   }
 
-  code {
+  figure {
     overflow-x: scroll;
     overflow-y: visible;
     padding: 10px 0 0 0;
   }
 
-  ol {
-    list-style: circle;
+  ol,
+  ul {
     list-style-position: inside;
   }
 
@@ -93,7 +93,8 @@
   h3,
   h4,
   p,
-  ol {
+  ol,
+  ul {
     margin: 16px 0 0 0;
   }
 
@@ -140,6 +141,7 @@
     }
 
   ol,
+  ul,
   p {
     font-size: 16px;
     line-height: 1.42;
